--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "nodemailer": "^6.6.3",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "stripe": "^8.174.0",
     "validator": "^13.6.0"
   }
